--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.rhythmix"
-        minSdk 34
+        minSdk 33
         targetSdk 34
         versionCode 1
         versionName "1.0"
@@ -36,4 +36,15 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    // Convert Data to JSON && Convert JSON to Data (Class Object)
+    implementation 'com.google.code.gson:gson:2.9.0'
+
+    // picassso for converting image link into API
+    implementation 'com.squareup.picasso:picasso:2.8'
+   // retrofit (HTTP client library for Android and Java that simplifies the process of making network requests and handling APIs)
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+  // gson converter
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
 }
