--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,7 @@ android.useAndroidX=true
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+
+# gradle.properties
+RAPID_API_KEY=bae0efd049mshd3823f0e2a43ab1p192424jsn46ab3ffb4f66
+RAPID_API_HOST=deezerdevs-deezer.p.rapidapi.com
