--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,12 +35,14 @@ dependencies {
 
     implementation 'com.amplifyframework:aws-api:1.33.0'
     implementation 'com.amplifyframework:aws-datastore:1.33.0'
+    implementation 'com.amplifyframework:aws-storage-s3:1.34.0'
     implementation 'com.amplifyframework:aws-auth-cognito:1.33.0'
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.karumi:dexter:6.2.2'
     implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
 
     //Reneh Dependencies
     implementation 'com.makeramen:roundedimageview:2.3.0'
