--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
     // Convert Data to JSON && Convert JSON to Data (Class Object)
     implementation 'com.google.code.gson:gson:2.9.0'
 
