--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -13,6 +14,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Rhythmix"
         tools:targetApi="31">
+        <activity
+            android:name=".Adapter.AlbumTracksAdapter"
+            android:exported="false" />
+        <activity
+            android:name=".AlbumTracksActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
