displayed albums, tracks in recycler views with design , and album tracks still displayed with list view (need to be changed into recycler view) also added search bar activity to handle the results

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.Rhythmix"
         tools:targetApi="31">
         <activity
+            android:name=".SearchBarResultsActivity"
+            android:exported="false" />
+        <activity
             android:name=".Adapter.AlbumTracksAdapter"
             android:exported="false" />
         <activity
