--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,22 +14,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Rhythmix"
         tools:targetApi="31">
-
         <activity
             android:name=".activities.CreatePlaylistActivity"
             android:exported="false" />
-
         <activity
             android:name=".activities.InsidePlaylistActivity"
             android:exported="false" />
-
-        <activity
-            android:name=".activities.LibraryActivity"/>
-
+        <activity android:name=".activities.LibraryActivity" />
         <activity
             android:name=".activities.LoginActivity"
             android:exported="false" />
-
         <activity
             android:name=".activities.MainActivity"
             android:exported="true">
@@ -39,37 +33,35 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activities.PlaylistsActivity"
             android:exported="false" />
-
         <activity
             android:name=".activities.ProfileActivity"
             android:exported="false" />
-
         <activity
             android:name=".activities.SearchActivity"
             android:exported="false" />
-
         <activity
             android:name=".activities.SignUpActivity"
             android:exported="false" />
-
         <activity
             android:name=".activities.SongPlayerActivity"
             android:exported="false" />
-
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
-
         <activity
             android:name=".ProfileFunctionalityActivity"
             android:exported="false" />
         <activity
             android:name=".SignUpFunctionalityActivity"
             android:exported="false" />
+
+        <service
+            android:name=".services.MediaPlayerService"
+            android:exported="false" />
+
     </application>
 
 </manifest>
