--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
 
     implementation 'com.amplifyframework:aws-api:1.33.0'
     implementation 'com.amplifyframework:aws-datastore:1.33.0'
+    implementation 'com.amplifyframework:aws-storage-s3:1.34.0'
     implementation 'com.amplifyframework:aws-auth-cognito:1.33.0'
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -48,4 +49,9 @@ dependencies {
 //    implementation 'com.github.ldt-libs:InsetsView:1.1'
     // Round Image View
     implementation 'com.makeramen:roundedimageview:2.3.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation 'com.squareup.picasso:picasso:2.8'
+
 }
