--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,11 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'com.squareup.picasso:picasso:2.8'
 
+
+
+    //Balqees Dependanci
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    // gson converter
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
 }
