--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -7,9 +7,9 @@
           "additionalAuthenticationProviders": [],
           "defaultAuthentication": {
             "apiKeyConfig": {
-              "apiKeyExpirationDate": "2024-02-09T17:06:34.976Z",
+              "apiKeyExpirationDate": "2024-02-15T18:19:58.624Z",
               "apiKeyExpirationDays": 60,
-              "description": "Final Project RhythmMix "
+              "description": "final project from thaer"
             },
             "authenticationType": "API_KEY"
           }
@@ -20,7 +20,7 @@
     }
   },
   "auth": {
-    "rhythmmix2d606791": {
+    "rhythmmix3d3b5f35": {
       "customAuth": false,
       "dependsOn": [],
       "frontendAuthConfig": {
@@ -37,8 +37,7 @@
         ],
         "socialProviders": [],
         "usernameAttributes": [
-          "EMAIL",
-          "PHONE_NUMBER"
+          "EMAIL"
         ],
         "verificationMechanisms": [
           "EMAIL"
@@ -46,6 +45,13 @@
       },
       "providerPlugin": "awscloudformation",
       "service": "Cognito"
+    }
+  },
+  "storage": {
+    "rhythemixstorage": {
+      "dependsOn": [],
+      "providerPlugin": "awscloudformation",
+      "service": "S3"
     }
   }
 }
