--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,10 @@ android {
 }
 
 dependencies {
+    implementation 'com.amplifyframework:aws-api:1.33.0'
+    implementation 'com.amplifyframework:aws-datastore:1.33.0'
+    implementation 'com.amplifyframework:aws-storage-s3:1.34.0'
+    implementation 'com.amplifyframework:aws-auth-cognito:1.33.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.karumi:dexter:6.2.2'
     implementation 'com.google.android.material:material:1.10.0'
@@ -49,9 +53,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
 
     //Farah Dependencies
-    implementation 'com.amplifyframework:aws-api:1.33.0'
-    implementation 'com.amplifyframework:aws-datastore:1.33.0'
-    implementation 'com.amplifyframework:aws-auth-cognito:1.33.0'
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
@@ -59,18 +61,11 @@ dependencies {
 
     // Balqees Dependencies
 
-    //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
-
-    // Convert Data to JSON && Convert JSON to Data (Class Object)
     implementation 'com.google.code.gson:gson:2.9.0'
-
-    // picasso for converting image link into API
     implementation 'com.squareup.picasso:picasso:2.8'
-    // retrofit (HTTP client library for Android and Java that simplifies the process of making network requests and handling APIs)
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    // gson converter
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
 }
