--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,9 @@ xmlns:tools="http://schemas.android.com/tools">
     <activity
         android:name=".Activities.SignUpActivity"
         android:exported="false" />
+    <activity
+        android:name=".Activities.LoginActivity"
+        android:exported="false" />
 </application>
 
 </manifest>
